# gtest

./: CMakeLists.txt  CMakeLists.txt.in  README.md  main.c
.github/workflows/: ci.yaml
include/: if1.h  if2.h
modules/: CodeCoverage.cmake
src/: main.c  sf1.c  sf2.c
tests/: CMakeLists.txt  CodeCoverage.cmake  sf1.cpp  sf2.cpp
